Add Exif tag reader on media picker
Add Exif tag reader on media picker

--- a/src/Platform/XLabs.Platform.Droid/XLabs.Platform.Droid.csproj
+++ b/src/Platform/XLabs.Platform.Droid/XLabs.Platform.Droid.csproj
@@ -78,6 +78,8 @@
     <Compile Include="Services\Geolocation\GeolocationSingleListener.cs" />
     <Compile Include="Services\Geolocation\Geolocator.cs" />
     <Compile Include="Services\KeyVaultStorage.cs" />
+    <Compile Include="Services\Media\ExifBinaryReader.cs" />
+    <Compile Include="Services\Media\JpegInfo.cs" />
     <Compile Include="Services\Media\MediaPicker.cs" />
     <Compile Include="Services\Media\MediaPickerActivity.cs" />
     <Compile Include="Services\Media\Microphone.cs" />
