--- a/src/Platform/XLabs.Platform/XLabs.Platform.csproj
+++ b/src/Platform/XLabs.Platform/XLabs.Platform.csproj
@@ -74,12 +74,19 @@
     <Compile Include="Services\IPhoneService.cs" />
     <Compile Include="Services\ISecureStorage.cs" />
     <Compile Include="Services\ITextToSpeechService.cs" />
+    <Compile Include="Services\Media\ExifTagFriendlyValues.cs" />
+    <Compile Include="Services\Media\ExifTags.cs" />
     <Compile Include="Services\Media\IAudioStream.cs" />
+    <Compile Include="Services\Media\IExifReader.cs" />
+    <Compile Include="Services\Media\IJpegInfo.cs" />
     <Compile Include="Services\Media\IMediaPicker.cs" />
     <Compile Include="Services\Media\ISoundService.cs" />
+    <Compile Include="Services\Media\JpegInfoBase.cs" />
+    <Compile Include="Services\Media\MediaExifException.cs" />
     <Compile Include="Services\Media\MediaExtensions.cs" />
     <Compile Include="Services\Media\MediaFile.cs" />
     <Compile Include="Services\Media\MediaFileNoteFoundException.cs" />
+    <Compile Include="Services\Media\MediaFormatException.cs" />
     <Compile Include="Services\Media\MediaStorageOptions.cs" />
     <Compile Include="Services\Media\SoundFile.cs" />
     <Compile Include="Services\Media\SoundFinishedEventArgs.cs" />
