--- a/src/Platform/XLabs.Platform.Droid/XLabs.Platform.Droid.csproj
+++ b/src/Platform/XLabs.Platform.Droid/XLabs.Platform.Droid.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Services\Geolocation\GeolocationContinuousListener.cs" />
     <Compile Include="Services\Geolocation\GeolocationSingleListener.cs" />
     <Compile Include="Services\Geolocation\Geolocator.cs" />
+    <Compile Include="Services\Geolocation\LocationManager.cs" />
     <Compile Include="Services\KeyVaultStorage.cs" />
     <Compile Include="Services\Media\ExifBinaryReader.cs" />
     <Compile Include="Services\Media\JpegInfo.cs" />
