--- a/src/Platform/XLabs.Platform/XLabs.Platform.csproj
+++ b/src/Platform/XLabs.Platform/XLabs.Platform.csproj
@@ -64,7 +64,7 @@
       <Link>Properties\AssemblyInfo.Shared.cs</Link>
     </Compile>
     <Compile Include="Services\Email\IEmailService.cs" />
-    <Compile Include="Services\GeoLocation\IGeolocator.cs" />
+    <Compile Include="Services\GeoLocation\ILocationManager.cs" />
     <Compile Include="Services\GeoLocation\Position.cs" />
     <Compile Include="Services\GeoLocation\PositionExtensions.cs" />
     <Compile Include="Services\INavigationService.cs" />
