--- a/.nuget/NuGet.Config
+++ b/.nuget/NuGet.Config
@@ -1,14 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <config>
+    <add key="DefaultPushSource" value="http://vfrget.azurewebsites.net/nuget" />
+  </config>
+
   <solution>
     <add key="disableSourceControlIntegration" value="true" />
   </solution>
   <packageSources>
     <add key="nuget.org (v2)" value="https://www.nuget.org/api/v2/" />
-    <!-- add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" -->
+    <add key="VfrTracks" value="http://vfrget.azurewebsites.net/nuget" />
   </packageSources>
   <disabledPackageSources />
   <activePackageSource>
     <add key="All" value="(Aggregate source)" />
   </activePackageSource>
+  <packageSourceCredentials>
+    <VfrTracks>
+      <add key="Username" value="test" />
+      <add key="ClearTextPassword" value="" />
+    </VfrTracks>
+  </packageSourceCredentials>
 </configuration>
