update Device Orientation with new Service

--- a/src/Platform/XLabs.Platform.Droid/XLabs.Platform.Droid.csproj
+++ b/src/Platform/XLabs.Platform.Droid/XLabs.Platform.Droid.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Device\BluetoothDevice.cs" />
     <Compile Include="Device\BluetoothHub.cs" />
     <Compile Include="Device\BroadcastMonitor.cs" />
+    <Compile Include="Device\DeviceOrientation.cs" />
     <Compile Include="Device\Display.cs" />
     <Compile Include="Device\Gyroscope.cs" />
     <Compile Include="Extensions\BroadcastReceiverExtensions.cs" />
