cleanup obsolete binding props in Icon*

--- a/samples/XLabs.Samples/XLabs.Samples.iOS/Info.plist
+++ b/samples/XLabs.Samples/XLabs.Samples.iOS/Info.plist
@@ -55,5 +55,11 @@
   <string>Your message goes here</string>
   <key>NSLocationWhenInUseUsageDescription</key>
   <string>Your message goes here</string>
+  <key>UIAppFonts</key>
+  <array>
+       <string>Fonts/Roboto-Light.ttf</string> 
+       <string>Fonts/fontawesome-webfont.ttf</string> 
+       
+  </array>
 </dict>
 </plist>
