--- a/samples/XLabs.Samples/XLabs.Samples.iOS/XLabs.Samples.iOS.csproj
+++ b/samples/XLabs.Samples/XLabs.Samples.iOS/XLabs.Samples.iOS.csproj
@@ -97,9 +97,9 @@
     </Compile>
     <None Include="app.config" />
     <None Include="Entitlements.plist" />
-    <None Include="fonts\fontawesome-webfont.ttf" />
-    <None Include="fonts\Open 24 Display St.ttf" />
-    <None Include="fonts\Roboto-Light.ttf" />
+    <None Include="Resources\Fonts\fontawesome-webfont.ttf" />
+    <None Include="Resources\Fonts\Open 24 Display St.ttf" />
+    <None Include="Resources\Fonts\Roboto-Light.ttf" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <ITunesArtwork Include="iTunesArtwork" />
