--- a/.nuget/NuGet.Config
+++ b/.nuget/NuGet.Config
@@ -18,7 +18,7 @@
   <packageSourceCredentials>
     <VfrTracks>
       <add key="Username" value="test" />
-      <add key="ClearTextPassword" value="test" />
+      <add key="ClearTextPassword" value="" />
     </VfrTracks>
   </packageSourceCredentials>
 </configuration>
