--- a/nuspec/XLabs.Forms.Charting.nuspec
+++ b/nuspec/XLabs.Forms.Charting.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>XLabs.Forms.Charting</id>
-    <version>2.5837.6</version>
+    <version>2.5837.12</version>
     <title>XLabs - Forms - Charting</title>
     <authors>XLabs Team</authors>
     <owners>XLabs Team</owners>
@@ -17,7 +17,7 @@
     <tags>Xamarin XLabs Forms Charting</tags>
     <dependencies>
       <group>
-        <dependency id="XLabs.Forms" version="[2.5837.6]" />
+        <dependency id="XLabs.Forms" version="[2.5837.12]" />
         <dependency id="Xamarin.Forms" version="2.3.0.107" />
       </group>
     </dependencies>
@@ -39,19 +39,19 @@
     <file src="..\src\Charting\XLabs.Forms.Charting.iOS\bin\$configuration$\XLabs.Forms.Charting.iOS.dll" target="lib\Xamarin.iOS10" />
     <file src="..\src\Charting\XLabs.Forms.Charting.iOS\bin\$configuration$\XLabs.Forms.Charting.iOS.pdb" target="lib\Xamarin.iOS10" />
     <!-- Assemblies: Windows 8.1 -->
-    <file src="..\src\Charting\XLabs.Forms.Charting\bin\$configuration$\XLabs.Forms.Charting.dll" target="lib\netcore451" />
+    <!--<file src="..\src\Charting\XLabs.Forms.Charting\bin\$configuration$\XLabs.Forms.Charting.dll" target="lib\netcore451" />
     <file src="..\src\Charting\XLabs.Forms.Charting\bin\$configuration$\XLabs.Forms.Charting.pdb" target="lib\netcore451" />
     <file src="..\src\Charting\XLabs.Forms.Charting.WinRT\bin\$configuration$\XLabs.Forms.Charting.WinRT.dll" target="lib\netcore451" />
     <file src="..\src\Charting\XLabs.Forms.Charting.WinRT\bin\$configuration$\XLabs.Forms.Charting.WinRT.pdb" target="lib\netcore451" />
-    <!-- Assemblies: Winows Mobile 8.1 -->
+    --><!-- Assemblies: Winows Mobile 8.1 --><!--
     <file src="..\src\Charting\XLabs.Forms.Charting\bin\$configuration$\XLabs.Forms.Charting.dll" target="lib\wpa81" />
     <file src="..\src\Charting\XLabs.Forms.Charting\bin\$configuration$\XLabs.Forms.Charting.pdb" target="lib\wpa81" />
     <file src="..\src\Charting\XLabs.Forms.Charting.WinRT.Phone\bin\$configuration$\XLabs.Forms.Charting.WinRT.Phone.dll" target="lib\wpa81" />
-    <file src="..\src\Charting\XLabs.Forms.Charting.WinRT.Phone\bin\$configuration$\XLabs.Forms.Charting.WinRT.Phone.pdb" target="lib\wpa81" />
+    <file src="..\src\Charting\XLabs.Forms.Charting.WinRT.Phone\bin\$configuration$\XLabs.Forms.Charting.WinRT.Phone.pdb" target="lib\wpa81" />-->
     <!-- Assemblies: .NET Core 5.0 -->
-    <file src="..\src\Charting\XLabs.Forms.Charting\bin\$configuration$\XLabs.Forms.Charting.dll" target="lib\uap10.0" />
+    <!--<file src="..\src\Charting\XLabs.Forms.Charting\bin\$configuration$\XLabs.Forms.Charting.dll" target="lib\uap10.0" />
     <file src="..\src\Charting\XLabs.Forms.Charting\bin\$configuration$\XLabs.Forms.Charting.pdb" target="lib\uap10.0" />
     <file src="..\src\Charting\XLabs.Forms.Charting.UWP\bin\$configuration$\XLabs.Forms.Charting.UWP.dll" target="lib\uap10.0" />
-    <file src="..\src\Charting\XLabs.Forms.Charting.UWP\bin\$configuration$\XLabs.Forms.Charting.UWP.pdb" target="lib\uap10.0" />
+    <file src="..\src\Charting\XLabs.Forms.Charting.UWP\bin\$configuration$\XLabs.Forms.Charting.UWP.pdb" target="lib\uap10.0" />-->
   </files>
 </package>
