--- a/nuspec/XLabs.Forms.nuspec
+++ b/nuspec/XLabs.Forms.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>XLabs.Forms</id>
-    <version>2.5837.6</version>
+    <version>2.5837.12</version>
     <title>XLabs - Forms</title>
     <authors>XLabs Team</authors>
     <owners>XLabs Team</owners>
@@ -17,10 +17,10 @@
     <tags>Xamarin XLabs Forms Controls GridView ListView</tags>
     <dependencies>
       <group>
-        <dependency id="XLabs.Core" version="[2.5837.6]" />
-        <dependency id="XLabs.IoC" version="[2.5837.6]" />
-        <dependency id="XLabs.Platform" version="[2.5837.6]" />
-        <dependency id="XLabs.Serialization" version="[2.5837.6]" />
+        <dependency id="XLabs.Core" version="[2.5837.12]" />
+        <dependency id="XLabs.IoC" version="[2.5837.12]" />
+        <dependency id="XLabs.Platform" version="[2.5837.12]" />
+        <dependency id="XLabs.Serialization" version="[2.5837.12]" />
         <dependency id="Xamarin.Forms" version="2.3.0.107" />
       </group>
     </dependencies>
@@ -45,19 +45,19 @@
     <file src="..\src\Forms\XLabs.Forms.iOS\bin\$configuration$\XLabs.Forms.iOS.pdb" target="lib\Xamarin.iOS10" />
     <file src="..\src\Forms\XLabs.Forms.iOS\bin\$configuration$\XLabs.Forms.iOS.dll" target="lib\Xamarin.iOS10" />
     <!-- Assemblies: Windows 8.1 -->
-    <file src="..\src\Forms\XLabs.Forms\bin\$configuration$\XLabs.Forms.dll" target="lib\netcore451" />
+    <!--<file src="..\src\Forms\XLabs.Forms\bin\$configuration$\XLabs.Forms.dll" target="lib\netcore451" />
     <file src="..\src\Forms\XLabs.Forms\bin\$configuration$\XLabs.Forms.pdb" target="lib\netcore451" />
     <file src="..\src\Forms\XLabs.Forms.WinRT\bin\$configuration$\XLabs.Forms.WinRT.dll" target="lib\netcore451" />
-    <file src="..\src\Forms\XLabs.Forms.WinRT\bin\$configuration$\XLabs.Forms.WinRT.pdb" target="lib\netcore451" />
+    <file src="..\src\Forms\XLabs.Forms.WinRT\bin\$configuration$\XLabs.Forms.WinRT.pdb" target="lib\netcore451" />-->
     <!-- Assemblies: Winows Mobile 8.1 -->
-    <file src="..\src\Forms\XLabs.Forms\bin\$configuration$\XLabs.Forms.dll" target="lib\wpa81" />
+    <!--<file src="..\src\Forms\XLabs.Forms\bin\$configuration$\XLabs.Forms.dll" target="lib\wpa81" />
     <file src="..\src\Forms\XLabs.Forms\bin\$configuration$\XLabs.Forms.pdb" target="lib\wpa81" />
     <file src="..\src\Forms\XLabs.Forms.WinRT.Phone\bin\$configuration$\XLabs.Forms.WinRT.Phone.dll" target="lib\wpa81" />
-    <file src="..\src\Forms\XLabs.Forms.WinRT.Phone\bin\$configuration$\XLabs.Forms.WinRT.Phone.pdb" target="lib\wpa81" />
+    <file src="..\src\Forms\XLabs.Forms.WinRT.Phone\bin\$configuration$\XLabs.Forms.WinRT.Phone.pdb" target="lib\wpa81" />-->
     <!-- Assemblies: .NET Core 5.0 -->
-    <file src="..\src\Forms\XLabs.Forms\bin\$configuration$\XLabs.Forms.dll" target="lib\uap10.0" />
+    <!--<file src="..\src\Forms\XLabs.Forms\bin\$configuration$\XLabs.Forms.dll" target="lib\uap10.0" />
     <file src="..\src\Forms\XLabs.Forms\bin\$configuration$\XLabs.Forms.pdb" target="lib\uap10.0" />
     <file src="..\src\Forms\XLabs.Forms.UWP\bin\$configuration$\XLabs.Forms.UWP.dll" target="lib\uap10.0" />
-    <file src="..\src\Forms\XLabs.Forms.UWP\bin\$configuration$\XLabs.Forms.UWP.pdb" target="lib\uap10.0" />
+    <file src="..\src\Forms\XLabs.Forms.UWP\bin\$configuration$\XLabs.Forms.UWP.pdb" target="lib\uap10.0" />-->
   </files>
 </package>
